--- a/web/site/package.json
+++ b/web/site/package.json
@@ -42,6 +42,7 @@
     "gulp-changed": "^1.1.1",
     "gulp-filesize": "0.0.6",
     "gulp-iconfont": "^1.0.0",
+    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-minify-css": "~0.5.1",
     "gulp-notify": "^2.2.0",
