--- a/web/site/package.json
+++ b/web/site/package.json
@@ -40,6 +40,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.1.1",
+    "gulp-coffeelint": "^0.4.0",
     "gulp-filesize": "0.0.6",
     "gulp-iconfont": "^1.0.0",
     "gulp-if": "^1.2.5",
