--- a/web/site/package.json
+++ b/web/site/package.json
@@ -61,7 +61,7 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-mocha": "^0.1.10",
-    "karma-nyan-reporter": "0.0.51",
+    "karma-mocha-reporter": "0.3.0",
     "karma-sinon-chai": "^0.3.0",
     "lodash": "^3.3.1",
     "merge-stream": "^0.1.7",
