--- a/web/site/package.json
+++ b/web/site/package.json
@@ -43,6 +43,7 @@
     "gulp-changed": "^1.1.1",
     "gulp-coffeelint": "^0.4.0",
     "gulp-filesize": "0.0.6",
+    "gulp-gh-pages": "^0.5.2",
     "gulp-iconfont": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
