--- a/web/site/package.json
+++ b/web/site/package.json
@@ -61,11 +61,13 @@
     "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coffee-preprocessor": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "0.3.0",
     "karma-sinon-chai": "^0.3.0",
     "lodash": "^3.3.1",
     "merge-stream": "^0.1.7",
+    "mold-source-map": "^0.4.0",
     "pretty-hrtime": "~1.0.0",
     "require-dir": "^0.1.0",
     "underscore": "^1.8.3",
